--- a/TodoApp/app/src/main/res/layout/activity_main.xml
+++ b/TodoApp/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="@string/new_item_button_text"
         android:id="@+id/btnAddItem"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
@@ -22,7 +22,9 @@
         android:layout_toStartOf="@+id/btnAddItem"
         android:layout_alignRight="@+id/btnAddItem"
         android:layout_alignEnd="@+id/btnAddItem"
-        android:layout_above="@+id/btnAddItem" />
+        android:layout_above="@+id/btnAddItem"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
