--- a/TodoApp/app/src/main/res/layout/activity_main.xml
+++ b/TodoApp/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:id="@+id/btnAddItem"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:onClick="onAddItem" />
 
     <ListView
         android:layout_width="wrap_content"
